--- a/try.ipynb
+++ b/try.ipynb
@@ -1839,8 +1839,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7d7bb1e",
+   "metadata": {},
+   "source": [
+    "### glance 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 128,
    "id": "df847e27",
    "metadata": {},
    "outputs": [
@@ -1848,51 +1856,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Rotating content of Page 3\n",
       "Top pages by header score (page → header_score):\n",
-      "  Page 91 → 12\n",
-      "  Page 93 → 11\n",
-      "  Page 87 → 10\n",
-      "  Page 85 → 9\n",
-      "  Page 4 → 8\n",
-      "  Page 81 → 8\n",
-      "  Page 92 → 8\n",
-      "  Page 40 → 7\n",
-      "  Page 82 → 7\n",
-      "  Page 86 → 7\n",
-      "  Page 112 → 7\n",
-      "  Page 5 → 6\n",
-      "  Page 43 → 6\n",
-      "  Page 61 → 6\n",
-      "  Page 89 → 6\n",
-      "  Page 115 → 6\n",
-      "  Page 6 → 5\n",
-      "  Page 42 → 5\n",
-      "  Page 55 → 5\n",
-      "  Page 57 → 5\n",
+      "  Page 9 → 7\n",
+      "  Page 2 → 5\n",
+      "  Page 7 → 5\n",
+      "  Page 4 → 4\n",
+      "  Page 6 → 4\n",
+      "  Page 5 → 3\n",
+      "  Page 8 → 3\n",
+      "  Page 1 → 1\n",
+      "  Page 3 → 1\n",
+      "  Page 10 → 1\n",
       "\n",
       "Term scores among header Top-K (page → term_score):\n",
-      "  Page 91 → 5\n",
-      "  Page 93 → 6\n",
-      "  Page 87 → 11\n",
-      "  Page 85 → 0\n",
-      "  Page 4 → 0\n",
-      "  Page 81 → 0\n",
-      "  Page 92 → 1\n",
-      "  Page 40 → 9\n",
-      "  Page 82 → 2\n",
-      "  Page 86 → 3\n",
-      "  Page 112 → 8\n",
-      "  Page 5 → 0\n",
-      "  Page 43 → 4\n",
-      "  Page 61 → 2\n",
-      "  Page 89 → 2\n",
-      "  Page 115 → 2\n",
-      "  Page 6 → 0\n",
-      "  Page 42 → 1\n",
-      "  Page 55 → 0\n",
-      "  Page 57 → 1\n",
+      "  Page 9 → 13\n",
+      "  Page 2 → 4\n",
+      "  Page 7 → 3\n",
+      "  Page 4 → 3\n",
+      "  Page 6 → 3\n",
+      "  Page 5 → 3\n",
+      "  Page 8 → 2\n",
+      "  Page 1 → 0\n",
+      "  Page 3 → 21\n",
+      "  Page 10 → 1\n",
       "\n",
-      "✅ Most likely P&L page: Page 87 (term score: 11)\n"
+      "✅ Most likely P&L page: Page 3 (term score: 21)\n"
      ]
     }
    ],
@@ -1910,18 +1899,35 @@
     "pnl_terms = [\n",
     "    \"sales\", \"turnover\", \"revenue\", \"total revenue\", \"net revenue\", \"gross revenue\",\n",
     "    \"cost of sales\", \"cost of goods sold\", \"cogs\", \"direct costs\",\n",
-    "    \"gross profit\", \"gross margin\",\n",
+    "    \"gross profit\", \"gross margin\",  \"consolidated\",\n",
     "    \"operating expenses\", \"opex\", \"selling expenses\", \"general and administrative expenses\", \"oﬃce and administrative expenses\",\n",
     "    \"sg&a\", \"research and development\", \"r&d\", \"depreciation\", \"amortization\", \"marketing and distribution expenses\", \"profit from operation\"\n",
     "    \"operating profit\", \"operating income\", \"ebit\", \"earnings before interest and tax\", \"financial expenses\",\n",
     "    \"other income\", \"other expenses\", \"non-operating income\", \"non-operating expenses\", \"non operating income\",\n",
     "    \"finance income\", \"finance cost\", \"interest income\", \"interest expense\", \"proﬁt/(loss) before tax & wppf\", \"contribution to wppf and welfare fund\",\n",
     "    \"profit before tax\", \"earnings before tax\", \"ebt\", \"net proﬁt before tax\", \"income tax expense\", \"net proﬁt/loss after tax\",\n",
-    "    \"income tax\", \"tax expense\", \"current tax\", \"deferred tax\",\n",
+    "    \"income tax\", \"tax expense\", \"current tax\", \"deferred tax\", \"for the period from\", \"Consolidated Statement\", \n",
     "    \"net profit\", \"net income\", \"profit after tax\", \"earnings\",\n",
     "    \"profit attributable to shareholders\", \"minority interest\",\n",
     "    \"earnings per share\", \"eps\", \"diluted eps\", \"basic eps\",\n",
-    "    \"ebitda\", \"earnings before interest tax depreciation amortization\"\n",
+    "    \"ebitda\", \"earnings before interest tax depreciation amortization\", \"Profit or\",\n",
+    "    \"Loss and\",\n",
+    "    \"Comprehensive income\",\n",
+    "    \"Consolidated account\",\n",
+    "    \"Consolidated income\",\n",
+    "    \"Statement of\",\n",
+    "    \"Other comprehensive\",\n",
+    "    \"Operating expenses\",\n",
+    "    \"Revenue expenses\",\n",
+    "    \"Earnings operations\",\n",
+    "    \"Statement of profit\",\n",
+    "    \"Profit or loss\",\n",
+    "    \"Other comprehensive income\",\n",
+    "    \"Consolidated profit or\",\n",
+    "    \"Profit and loss\",\n",
+    "    \"Earnings and expenses\",\n",
+    "    \"Statement of earnings\",\n",
+    "    \"Revenue and expenses\"\n",
     "]\n",
     "\n",
     "# Header words (split into individual words)\n",
@@ -1942,6 +1948,47 @@
     "# -----------------------------\n",
     "# Helpers\n",
     "# -----------------------------\n",
+    "\n",
+    "def check_rotated_page(doc):\n",
+    "\n",
+    "    new_doc = fitz.open()  # empty PDF\n",
+    "\n",
+    "    for page_number, page in enumerate(doc, start=1):\n",
+    "        # Detect rotated pages (heuristic)\n",
+    "        blocks = page.get_text(\"blocks\")\n",
+    "        tall_blocks, wide_blocks = 0, 0\n",
+    "        for b in blocks:\n",
+    "            if len(b) < 5:\n",
+    "                continue\n",
+    "            x0, y0, x1, y1, text, *_ = b\n",
+    "            width = x1 - x0\n",
+    "            height = y1 - y0\n",
+    "            if width == 0 or height == 0:\n",
+    "                continue\n",
+    "            if height > width:\n",
+    "                tall_blocks += 1\n",
+    "            else:\n",
+    "                wide_blocks += 1\n",
+    "\n",
+    "        total_blocks = tall_blocks + wide_blocks\n",
+    "        rotated = page.rotation in (90, 270) or (total_blocks > 0 and tall_blocks / total_blocks > 0.5)\n",
+    "\n",
+    "        # Create new page\n",
+    "        rect = page.rect\n",
+    "        new_page = new_doc.new_page(width=rect.width, height=rect.height)\n",
+    "\n",
+    "        if rotated:\n",
+    "            print(f\"Rotating content of Page {page_number}\")\n",
+    "            # Show page content rotated by 90 degrees clockwise\n",
+    "            new_page.show_pdf_page(rect, doc, page_number - 1, rotate=-90)\n",
+    "        else:\n",
+    "            new_page.show_pdf_page(rect, doc, page_number - 1)\n",
+    "\n",
+    "    \n",
+    "    # new_doc.close()\n",
+    "    # doc.close()\n",
+    "    return new_doc\n",
+    "\n",
     "def _page_text_plain(doc, idx: int) -> str:\n",
     "    \"\"\"Machine-readable text via PyMuPDF; returns lowercase text (may be empty).\"\"\"\n",
     "    page = doc.load_page(idx)\n",
@@ -1957,6 +2004,63 @@
     "    image = Image.open(io.BytesIO(img_bytes))\n",
     "    txt = pytesseract.image_to_string(image) or \"\"\n",
     "    return txt.lower()\n",
+    "    \n",
+    "def _page_upper_half_ocr(doc, idx: int, dpi: int = 360, lang: str = \"eng\",\n",
+    "                         tesseract_cfg: str = \"--oem 3 --psm 6\") -> str:\n",
+    "    \"\"\"\n",
+    "    OCR the UPPER half of a page.\n",
+    "    Renders at high DPI, OCRs the cropped region, and returns text (lowercased).\n",
+    "    \"\"\"\n",
+    "    page = doc.load_page(idx)\n",
+    "    r = page.rect\n",
+    "\n",
+    "    # Upper half rectangle\n",
+    "    mid_y = r.y0 + (r.height / 2.0)\n",
+    "    upper_half = fitz.Rect(r.x0, r.y0, r.x1, mid_y)\n",
+    "\n",
+    "    # Scale for higher DPI OCR\n",
+    "    mat = fitz.Matrix(dpi / 72.0, dpi / 72.0)\n",
+    "\n",
+    "    # Render cropped region\n",
+    "    pix = page.get_pixmap(matrix=mat, clip=upper_half, alpha=False)\n",
+    "    img = Image.open(io.BytesIO(pix.tobytes(\"png\"))).convert(\"L\")  # grayscale\n",
+    "    \n",
+    "    # OCR\n",
+    "    text = pytesseract.image_to_string(img, lang=lang, config=tesseract_cfg) or \"\"\n",
+    "    return text.lower()\n",
+    "    \n",
+    "def _page_left_half_text_ocr(doc, idx: int, dpi: int = 360, lang: str = \"eng\",\n",
+    "                        tesseract_cfg: str = \"--oem 3 --psm 6\") -> str:\n",
+    "    \"\"\"\n",
+    "    OCR the LEFT half of a page by splitting it into UPPER-LEFT and LOWER-LEFT regions.\n",
+    "    Renders each region at high DPI, OCRs them separately, and concatenates the text.\n",
+    "    \"\"\"\n",
+    "    page = doc.load_page(idx)\n",
+    "    r = page.rect\n",
+    "\n",
+    "    # Compute left-half bounds robustly using rect.x0/x1 (not assuming origin=0)\n",
+    "    mid_x = r.x0 + (r.width / 2.0)\n",
+    "    mid_y = r.y0 + (r.height / 2.0)\n",
+    "\n",
+    "    # Left-half only\n",
+    "    left_upper = fitz.Rect(r.x0, r.y0, mid_x, mid_y)\n",
+    "    left_lower = fitz.Rect(r.x0, mid_y, mid_x, r.y1)\n",
+    "\n",
+    "    # Scale for higher DPI OCR\n",
+    "    mat = fitz.Matrix(dpi / 72.0, dpi / 72.0)\n",
+    "\n",
+    "    def ocr_region(clip_rect):\n",
+    "        pix = page.get_pixmap(matrix=mat, clip=clip_rect, alpha=False)\n",
+    "        img = Image.open(io.BytesIO(pix.tobytes(\"png\"))).convert(\"L\")  # grayscale helps OCR\n",
+    "        # Optional light binarization (uncomment if needed):\n",
+    "        # img = img.point(lambda x: 0 if x < 200 else 255, mode=\"1\")\n",
+    "        text = pytesseract.image_to_string(img, lang=lang, config=tesseract_cfg) or \"\"\n",
+    "        return text.lower()\n",
+    "\n",
+    "    txt_upper = ocr_region(left_upper)\n",
+    "    txt_lower = ocr_region(left_lower)\n",
+    "\n",
+    "    return txt_upper + \"\\n\" + txt_lower\n",
     "\n",
     "def _score_header_words(text: str) -> int:\n",
     "    \"\"\"+1 per header word present at least once.\"\"\"\n",
@@ -1982,7 +2086,8 @@
     "    pdf_path: str,\n",
     "    header_top_k: int = 20,\n",
     "    chunk_size: int = 100,\n",
-    "    ocr_threshold_chars: int = 40\n",
+    "    ocr_threshold_chars: int = 40,\n",
+    "    rotation_option = False\n",
     "):\n",
     "    \"\"\"\n",
     "    Stage A (header ranking): scan the whole PDF in chunks of `chunk_size` pages,\n",
@@ -1992,7 +2097,11 @@
     "    Stage B (term ranking): for those Top-K pages, if plain text is too short,\n",
     "    OCR ONLY those pages; then compute term scores and return the best page.\n",
     "    \"\"\"\n",
-    "    doc = fitz.open(pdf_path)\n",
+    "    if rotation_option:\n",
+    "        doc1 = fitz.open(pdf_path)\n",
+    "        doc = check_rotated_page(doc1)\n",
+    "    else:\n",
+    "        doc = fitz.open(pdf_path)\n",
     "    n_pages = len(doc)\n",
     "\n",
     "    # If file is small, just use one chunk\n",
@@ -2006,6 +2115,11 @@
     "        end = min(start + chunk_size, n_pages)\n",
     "        for idx in range(start, end):\n",
     "            text = _page_text_plain(doc, idx)\n",
+    "            # Fallback: if too little plain text, OCR the upper half instead\n",
+    "            if len(text.strip()) < 100:\n",
+    "                text = _page_upper_half_ocr(doc, idx)\n",
+    "                \n",
+    "\n",
     "            hs = _score_header_words(text)\n",
     "            header_scores.append((idx + 1, hs))  # 1-based page nums\n",
     "\n",
@@ -2025,6 +2139,9 @@
     "        if len(text.strip()) < ocr_threshold_chars:\n",
     "            text = _page_text_ocr(doc, idx)  # targeted OCR\n",
     "        ts = _score_terms(text)\n",
+    "        if ts < 3:\n",
+    "            text = _page_left_half_text_ocr(doc, idx)\n",
+    "            ts = _score_terms(text)\n",
     "        term_scores.append((page_num, ts))\n",
     "\n",
     "    doc.close()\n",
@@ -2049,8 +2166,8 @@
     "# Run\n",
     "# -----------------------------\n",
     "# Example:\n",
-    "pdf_file = \"sample9.pdf\"\n",
-    "best = find_best_pnl_page_chunked(pdf_file)\n"
+    "pdf_file = \"sample29.pdf\"\n",
+    "best = find_best_pnl_page_chunked(pdf_file, rotation_option=True)\n"
    ]
   }
  ],
@@ -2070,7 +2187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
