maybe detecting page final!

--- a/try.ipynb
+++ b/try.ipynb
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 138,
    "id": "df847e27",
    "metadata": {},
    "outputs": [
@@ -1856,32 +1856,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rotating content of Page 3\n",
       "Top pages by header score (page → header_score):\n",
-      "  Page 9 → 7\n",
-      "  Page 2 → 5\n",
-      "  Page 7 → 5\n",
-      "  Page 4 → 4\n",
-      "  Page 6 → 4\n",
-      "  Page 5 → 3\n",
-      "  Page 8 → 3\n",
-      "  Page 1 → 1\n",
-      "  Page 3 → 1\n",
-      "  Page 10 → 1\n",
+      "  Page 158 → 11\n",
+      "  Page 146 → 10\n",
+      "  Page 155 → 10\n",
+      "  Page 156 → 10\n",
+      "  Page 157 → 10\n",
+      "  Page 179 → 10\n",
+      "  Page 210 → 10\n",
+      "  Page 229 → 10\n",
+      "  Page 133 → 9\n",
+      "  Page 151 → 9\n",
+      "  Page 160 → 9\n",
+      "  Page 162 → 9\n",
+      "  Page 163 → 9\n",
+      "  Page 167 → 9\n",
+      "  Page 183 → 9\n",
+      "  Page 189 → 9\n",
+      "  Page 199 → 9\n",
+      "  Page 218 → 9\n",
+      "  Page 226 → 9\n",
+      "  Page 234 → 9\n",
       "\n",
       "Term scores among header Top-K (page → term_score):\n",
-      "  Page 9 → 13\n",
-      "  Page 2 → 4\n",
-      "  Page 7 → 3\n",
-      "  Page 4 → 3\n",
-      "  Page 6 → 3\n",
-      "  Page 5 → 3\n",
-      "  Page 8 → 2\n",
-      "  Page 1 → 0\n",
-      "  Page 3 → 21\n",
-      "  Page 10 → 1\n",
+      "  Page 158 → 7\n",
+      "  Page 146 → 17\n",
+      "  Page 155 → 5\n",
+      "  Page 156 → 6\n",
+      "  Page 157 → 0\n",
+      "  Page 179 → 3\n",
+      "  Page 210 → 8\n",
+      "  Page 229 → 16\n",
+      "  Page 133 → 2\n",
+      "  Page 151 → 14\n",
+      "  Page 160 → 3\n",
+      "  Page 162 → 1\n",
+      "  Page 163 → 6\n",
+      "  Page 167 → 6\n",
+      "  Page 183 → 6\n",
+      "  Page 189 → 6\n",
+      "  Page 199 → 1\n",
+      "  Page 218 → 4\n",
+      "  Page 226 → 5\n",
+      "  Page 234 → 6\n",
       "\n",
-      "✅ Most likely P&L page: Page 3 (term score: 21)\n"
+      "✅ Most likely P&L page: Page 146 (term score: 17)\n"
      ]
     }
    ],
@@ -2166,8 +2185,8 @@
     "# Run\n",
     "# -----------------------------\n",
     "# Example:\n",
-    "pdf_file = \"sample29.pdf\"\n",
-    "best = find_best_pnl_page_chunked(pdf_file, rotation_option=True)\n"
+    "pdf_file = \"sample34.pdf\"\n",
+    "best = find_best_pnl_page_chunked(pdf_file, rotation_option=False)\n"
    ]
   }
  ],
