rotation issue finally fixed

--- a/try.ipynb
+++ b/try.ipynb
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "df847e27",
    "metadata": {},
    "outputs": [
@@ -1857,50 +1857,50 @@
      "output_type": "stream",
      "text": [
       "Top pages by header score (page → header_score):\n",
-      "  Page 158 → 11\n",
-      "  Page 146 → 10\n",
-      "  Page 155 → 10\n",
-      "  Page 156 → 10\n",
-      "  Page 157 → 10\n",
-      "  Page 179 → 10\n",
-      "  Page 210 → 10\n",
-      "  Page 229 → 10\n",
-      "  Page 133 → 9\n",
-      "  Page 151 → 9\n",
-      "  Page 160 → 9\n",
-      "  Page 162 → 9\n",
-      "  Page 163 → 9\n",
-      "  Page 167 → 9\n",
-      "  Page 183 → 9\n",
-      "  Page 189 → 9\n",
-      "  Page 199 → 9\n",
-      "  Page 218 → 9\n",
-      "  Page 226 → 9\n",
-      "  Page 234 → 9\n",
+      "  Page 2 → 11\n",
+      "  Page 6 → 10\n",
+      "  Page 8 → 9\n",
+      "  Page 17 → 9\n",
+      "  Page 7 → 8\n",
+      "  Page 9 → 8\n",
+      "  Page 13 → 8\n",
+      "  Page 20 → 8\n",
+      "  Page 1 → 7\n",
+      "  Page 18 → 7\n",
+      "  Page 21 → 7\n",
+      "  Page 4 → 6\n",
+      "  Page 5 → 6\n",
+      "  Page 12 → 6\n",
+      "  Page 3 → 5\n",
+      "  Page 11 → 5\n",
+      "  Page 10 → 4\n",
+      "  Page 14 → 4\n",
+      "  Page 16 → 4\n",
+      "  Page 23 → 3\n",
       "\n",
       "Term scores among header Top-K (page → term_score):\n",
-      "  Page 158 → 7\n",
-      "  Page 146 → 17\n",
-      "  Page 155 → 5\n",
-      "  Page 156 → 6\n",
-      "  Page 157 → 0\n",
-      "  Page 179 → 3\n",
-      "  Page 210 → 8\n",
-      "  Page 229 → 16\n",
-      "  Page 133 → 2\n",
-      "  Page 151 → 14\n",
-      "  Page 160 → 3\n",
-      "  Page 162 → 1\n",
-      "  Page 163 → 6\n",
-      "  Page 167 → 6\n",
-      "  Page 183 → 6\n",
-      "  Page 189 → 6\n",
-      "  Page 199 → 1\n",
-      "  Page 218 → 4\n",
-      "  Page 226 → 5\n",
-      "  Page 234 → 6\n",
+      "  Page 2 → 22\n",
+      "  Page 6 → 10\n",
+      "  Page 8 → 11\n",
+      "  Page 17 → 11\n",
+      "  Page 7 → 2\n",
+      "  Page 9 → 7\n",
+      "  Page 13 → 2\n",
+      "  Page 20 → 0\n",
+      "  Page 1 → 5\n",
+      "  Page 18 → 13\n",
+      "  Page 21 → 7\n",
+      "  Page 4 → 3\n",
+      "  Page 5 → 5\n",
+      "  Page 12 → 1\n",
+      "  Page 3 → 3\n",
+      "  Page 11 → 5\n",
+      "  Page 10 → 3\n",
+      "  Page 14 → 1\n",
+      "  Page 16 → 4\n",
+      "  Page 23 → 0\n",
       "\n",
-      "✅ Most likely P&L page: Page 146 (term score: 17)\n"
+      "✅ Most likely P&L page: Page 2 (term score: 22)\n"
      ]
     }
    ],
@@ -1910,6 +1910,7 @@
     "import fitz  # PyMuPDF\n",
     "from PIL import Image\n",
     "import pytesseract\n",
+    "from pytesseract import image_to_osd\n",
     "\n",
     "# -----------------------------\n",
     "# Dictionaries\n",
@@ -1968,44 +1969,36 @@
     "# Helpers\n",
     "# -----------------------------\n",
     "\n",
-    "def check_rotated_page(doc):\n",
+    "def detect_orientation(page, dpi=144):\n",
+    "    \"\"\"Detect orientation of a PDF page using Tesseract OSD.\"\"\"\n",
+    "    mat = fitz.Matrix(dpi/72, dpi/72)\n",
+    "    pix = page.get_pixmap(matrix=mat, alpha=False)\n",
+    "    img_bytes = pix.tobytes(\"png\")\n",
+    "    img = Image.open(io.BytesIO(img_bytes))\n",
+    "    osd = image_to_osd(img)\n",
+    "    for line in osd.splitlines():\n",
+    "        if line.startswith(\"Rotate:\"):\n",
+    "            return int(line.split(\":\")[1].strip())\n",
+    "    return 0\n",
     "\n",
-    "    new_doc = fitz.open()  # empty PDF\n",
+    "\n",
+    "def check_rotated_page(doc):\n",
+    "    \"\"\"Return a new PDF with all pages normalized using OCR orientation detection.\"\"\"\n",
+    "    new_doc = fitz.open()\n",
     "\n",
     "    for page_number, page in enumerate(doc, start=1):\n",
-    "        # Detect rotated pages (heuristic)\n",
-    "        blocks = page.get_text(\"blocks\")\n",
-    "        tall_blocks, wide_blocks = 0, 0\n",
-    "        for b in blocks:\n",
-    "            if len(b) < 5:\n",
-    "                continue\n",
-    "            x0, y0, x1, y1, text, *_ = b\n",
-    "            width = x1 - x0\n",
-    "            height = y1 - y0\n",
-    "            if width == 0 or height == 0:\n",
-    "                continue\n",
-    "            if height > width:\n",
-    "                tall_blocks += 1\n",
-    "            else:\n",
-    "                wide_blocks += 1\n",
+    "        angle = detect_orientation(page)\n",
+    "        # print(f\"Page {page_number}: detected rotation = {angle}°\")\n",
     "\n",
-    "        total_blocks = tall_blocks + wide_blocks\n",
-    "        rotated = page.rotation in (90, 270) or (total_blocks > 0 and tall_blocks / total_blocks > 0.5)\n",
-    "\n",
-    "        # Create new page\n",
     "        rect = page.rect\n",
     "        new_page = new_doc.new_page(width=rect.width, height=rect.height)\n",
     "\n",
-    "        if rotated:\n",
-    "            print(f\"Rotating content of Page {page_number}\")\n",
-    "            # Show page content rotated by 90 degrees clockwise\n",
+    "        if angle in (90, 270, 180):\n",
+    "            print(f\" -> Normalizing Page {page_number}\")\n",
     "            new_page.show_pdf_page(rect, doc, page_number - 1, rotate=-90)\n",
     "        else:\n",
     "            new_page.show_pdf_page(rect, doc, page_number - 1)\n",
     "\n",
-    "    \n",
-    "    # new_doc.close()\n",
-    "    # doc.close()\n",
     "    return new_doc\n",
     "\n",
     "def _page_text_plain(doc, idx: int) -> str:\n",
@@ -2185,7 +2178,7 @@
     "# Run\n",
     "# -----------------------------\n",
     "# Example:\n",
-    "pdf_file = \"sample34.pdf\"\n",
+    "pdf_file = \"sample36.pdf\"\n",
     "best = find_best_pnl_page_chunked(pdf_file, rotation_option=False)\n"
    ]
   }
